<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jbillote.weatherreportapp.activity.DailyForecastActivity">

    <ProgressBar
        android:id="@+id/forecast_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecast_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/forecast_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Summary"
        android:paddingStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/forecast_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        app:srcCompat="@drawable/clear_day"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/sunrise_sunset_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_sunset_time"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:paddingTop="113dp"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/sunrise_sunset_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00/00:00"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/sunrise_sunset_label"
        android:paddingTop="113dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/precip_chance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precip_prob"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:paddingTop="130dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/precip_chance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100% of rain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/precip_chance_label"
        android:paddingTop="130dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/temp_high_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_high"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="64dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/temp_high_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="88\u2109"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/temp_high_label"
        android:paddingTop="64dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/temp_low_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_low"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="81dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/temp_low_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60\u2109"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/temp_low_label"
        android:paddingTop="81dp"
        android:visibility="invisible" />

</android.support.constraint.ConstraintLayout>
